--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Research Interests</a></li>
                 </ul>
             </div>
         </nav>
@@ -127,9 +127,11 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>I enjoy most of my time being outdoors.I play cricket with friends, travel to different beaches.I enjoy mountain biking, free climbing, and gardening.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in data science world.</p>
+                    <h2 class="mb-5">Research Interests</h2>
+                    <p>There are a number of technologies that can be used to detect drowsiness in drivers. 
+                    One promising technology is image processing. Image processing can be used to 
+                    monitor the driver's eyes for signs of drowsiness, such as closed eyes, drooping eyelids, 
+                    and decreased eye blink rate.</p>
                 </div>
             </section>
             <hr class="m-0" />
