--- a/index.html
+++ b/index.html
@@ -128,10 +128,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Research Interests</h2>
-                    <p>There are a number of technologies that can be used to detect drowsiness in drivers. 
-                    One promising technology is image processing. Image processing can be used to 
-                    monitor the driver's eyes for signs of drowsiness, such as closed eyes, drooping eyelids, 
-                    and decreased eye blink rate.</p>
+                    <p>Research Interests</h2>
+                    <p>In today's fast-paced world, vehicular accidents due to driver drowsiness have emerged as a critical concern for road safety. Drowsiness, often caused by factors such as fatigue, sleep deprivation, and monotony, significantly impairs a driver's cognitive abilities and reaction times, leading to an increased risk of accidents. To mitigate this issue and enhance road safety, the development of an efficient drowsiness detection and alerting system is of paramount importance.</p>
                 </div>
             </section>
             <hr class="m-0" />
