--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/ishan-dissanayake-b91042107/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/IshanDissanayake"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/S.I.Dissanayake?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
