--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ishan-dissanayake-b91042107/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/IshanDissanayake"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?hl=en&user=Kwp40tgAAAAJ"><i class="fas fa-graduation-cap"></i></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/S.I.Dissanayake"><i class="fab fa-facebook-f"></i></a>
                     </div>
