--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mt-4"></div>
-                    <div class="col-lg-4 col-sm-6 mt-4">
+                    <div class="col-lg-4 col-sm-6 mt-4 mx-auto">
                         <div class="card">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
@@ -110,7 +109,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mt-4"></div>
                 </div>
             </div>
         </section>
