--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section class="about" id="about">
             <div class="container">
-                <h2 class="display-5 fw-bold mb-4">About Me</h2>
+                <h2 class="display-5 fw-bold mb-4 text-center">About Me</h2>
                 <div class="col-sm-6">
                     <img src="..." alt="">
                 </div>
