--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"hero>Home</a>
+                <a class="nav-link" aria-current="page" href="#"hero>Home</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
